--- a/app/src/main/res/layout/activity_locker.xml
+++ b/app/src/main/res/layout/activity_locker.xml
@@ -165,7 +165,7 @@
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/lockerActivityInputTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text=""
